chore: remove default value from login form

--- a/media/webview.html
+++ b/media/webview.html
@@ -444,8 +444,8 @@
                 const content = document.getElementById('content')
                 content.innerHTML = `
       <form id="loginForm" action="#" method="post">
-        <input type="text" name="email" placeholder="Masukkan email" value="sikassep@gmail.com" />
-        <input type="password" name="password" placeholder="Masukkan password" value="qwertieser" />
+        <input type="text" name="email" placeholder="Masukkan email" />
+        <input type="password" name="password" placeholder="Masukkan password" />
         <button type="submit">Login</button>
       </form>
       <a href="https://pacar-ai.my.id/" target="_blank">Register</a>
